WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205164
REGRESSION: (
r251677
) imported/w3c/web-platform-tests/html/semantics/forms/form-submission-0/form-double-submit-3.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=205164
Summary
REGRESSION: (r251677) imported/w3c/web-platform-tests/html/semantics/forms/fo...
Truitt Savell
Reported
2019-12-12 08:57:35 PST
The new test imported/w3c/web-platform-tests/html/semantics/forms/form-submission-0/form-double-submit-3.html is a flakey failure
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fforms%2Fform-submission-0%2Fform-double-submit-3.html
on all Mac Diff: --- /Volumes/Data/slave/highsierra-release-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/html/semantics/forms/form-submission-0/form-double-submit-3-expected.txt +++ /Volumes/Data/slave/highsierra-release-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/html/semantics/forms/form-submission-0/form-double-submit-3-actual.txt @@ -4,5 +4,5 @@ submit -FAIL <button> should have the same double-submit protection as <input type=submit> assert_unreached: Frame1 should not get navigated by this test. Reached unreachable code +PASS <button> should have the same double-submit protection as <input type=submit>
Attachments
Patch
(9.27 KB, patch)
2019-12-13 11:50 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(13.74 KB, patch)
2019-12-19 12:01 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(14.37 KB, patch)
2019-12-19 12:37 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-12-12 08:58:13 PST
<
rdar://problem/57879042
>
Truitt Savell
Comment 2
2019-12-12 08:58:31 PST
Test was added in
https://trac.webkit.org/changeset/251677/webkit
Truitt Savell
Comment 3
2019-12-12 09:26:10 PST
Marked test as failing while investigating:
https://trac.webkit.org/changeset/253429/webkit
Chris Dumez
Comment 4
2019-12-13 11:50:59 PST
Created
attachment 385623
[details]
Patch
Alex Christensen
Comment 5
2019-12-13 12:34:06 PST
Comment on
attachment 385623
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=385623&action=review
> LayoutTests/ChangeLog:9 > + Unskip test that should no longer be flaky.
You have inconsistent spelling of "flaky" in this change log.
Chris Dumez
Comment 6
2019-12-13 12:34:57 PST
(In reply to Alex Christensen from
comment #5
)
> Comment on
attachment 385623
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=385623&action=review
> > > LayoutTests/ChangeLog:9 > > + Unskip test that should no longer be flaky. > > You have inconsistent spelling of "flaky" in this change log.
Because the bug title was not written by me. Which one is right? :)
Chris Dumez
Comment 7
2019-12-13 12:36:13 PST
I'm going to go with "flaky".
Chris Dumez
Comment 8
2019-12-13 12:38:18 PST
Committed
r253493
: <
https://trac.webkit.org/changeset/253493
>
Alexey Proskuryakov
Comment 9
2019-12-16 14:05:59 PST
***
Bug 203609
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 10
2019-12-16 14:06:25 PST
***
Bug 204800
has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 11
2019-12-17 18:32:32 PST
Reverted in <
https://trac.webkit.org/changeset/253666
>.
Chris Dumez
Comment 12
2019-12-19 12:01:12 PST
Created
attachment 386129
[details]
Patch
Chris Dumez
Comment 13
2019-12-19 12:37:01 PST
Created
attachment 386133
[details]
Patch
WebKit Commit Bot
Comment 14
2019-12-19 16:29:05 PST
Comment on
attachment 386133
[details]
Patch Clearing flags on attachment: 386133 Committed
r253799
: <
https://trac.webkit.org/changeset/253799
>
WebKit Commit Bot
Comment 15
2019-12-19 16:29:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug