REGRESSION: (r251677) imported/w3c/web-platform-tests/html/semantics/forms/form-submission-0/form-double-submit-3.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=205164 <rdar://problem/57879042>

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

Rebaseline WPT tests now that they are passing.

* web-platform-tests/html/semantics/forms/form-submission-0/form-double-submit-3-expected.txt:
* web-platform-tests/html/semantics/forms/form-submission-0/form-double-submit-expected.txt:

Source/WebCore:

Submitting a form should cancel any pending navigation scheduled by a previous submission of this form:
- https://html.spec.whatwg.org/multipage/form-control-infrastructure.html#form-submission-algorithm (step 22.3)

No new tests, rebaselined existing tests.

* html/HTMLFormElement.cpp:
(WebCore::HTMLFormElement::submit):
* html/HTMLFormElement.h:
* loader/FormSubmission.h:
(WebCore::FormSubmission::cancel):
(WebCore::FormSubmission::wasCancelled const):
* loader/NavigationScheduler.cpp:

LayoutTests:

Unskip test that should no longer be flaky.

* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/218415@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253493 268f45cc-cd09-0410-ab3c-d52691b4dbfc